--- a/css/styles.css
+++ b/css/styles.css
@@ -539,3 +539,77 @@ div.copyright>p{
 	font-weight: bold;
 	font-size: 
 }
+
+
+/*Adding responsiveness*/
+@media (min-width: 1100px) and (max-width: 1283px ) {
+	img {
+	width: 170px;
+	height: 47px;
+	margin: 14px 30px;
+}
+	ul.list li.learn a {
+	font-size: 13px;
+	padding: 13px 23px;
+	border-radius: 5px;
+	
+}
+
+	ul.list li {
+	margin: 16px 10px;
+	font-size: 14px;
+}
+
+	h1 {
+	font-size: 65px;
+}
+
+div.box {
+	width: 400px;
+		}
+
+		div.blue a {
+	box-sizing: border-box;
+	height: 48px;
+	width: 170px;
+	border-radius: 4px;
+	background-color: black;
+	float: right;
+	margin: 30px 100px 20px 0px;
+	font-size: 12px;
+	padding: 13px;
+	text-align: center;
+}
+
+	.blue p {
+	font-size: 16px;
+	float: left;
+	margin: 40px 0px 40px 170px;
+}
+.black>p {
+	float: left;
+	margin: 33px 15px 50px 100px;
+	font-size: 16px;
+}
+div.testimonial-img img {
+	width: 70px;
+	height: 70px;
+	margin-left: 80px;
+}
+
+.black>a {
+	float: right;
+	box-sizing: border-box;
+	text-align: center;
+	padding: 12px;
+	margin: 23px 130px;
+	height: 45px;
+	width: 170px;
+	border-radius: 3px;
+	font-size: 14px;
+	color: white;
+	text-decoration: none;
+	border: none;
+
+}
+}
